net: Delete UrlInfo after DNS resolution

The Predictor keeps in memory a UrlInfo object for all hosts that it tries to
preresolve and never discards them (except if the user clears the browsing
data). This causes memory leaks.

After resolution is complete the map of UrlInfos is used to deduplicate DNS
requests to already seen hosts that we beleive are still in the browser DNS
cache. The another consumer of the information is about:dns.

The additional layer of caching for DNS requests is unnecessary so this CL
simply sets the DnsProcessingState::ASSIGNED_BUT_MARKED state instead of
DnsProcessingState::ASSIGNED to ensure deletion in Predictor::LookupFinished().

Bug: 752954
Change-Id: I8a6734b071f19ab289a7be5dedc7794266854e6d